# pharma-maintenance-insights-agent

./: .env.example  OT SAP PM Demo.xlsx  README.md  agents-cli-manifest.yaml  pyproject.toml
.claude/: launch.json
app/: agent.py  agent_runtime_app.py  config.py  fast_api_app.py  metrics.py  models.py  security.py  workorders_reader.py
static/: index.html
tests/unit/: test_metrics.py
