[project]
name = "pharma-maintenance-insights-agent"
version = "0.1.0"
description = "Weekly maintenance insights agent for a pharma plant (Kaggle Vibe Coding capstone)"
authors = [
    {name = "Your Name", email = "your@email.com"},
]

dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "openpyxl>=3.1.5",
]
requires-python = ">=3.11,<3.14"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
